--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,6 @@ edition = "2021"
 async-trait = "0.1"
 backoff = "0.4"
 clap = "4.5"
-env_logger = "0.11"
-log = "0.4"
 prometheus-client = "0.23"
 rand = "0.9"
 reqwest = { version = "0.12", features = ["json"] }
@@ -23,3 +21,12 @@ warp = "0.3"
 snafu = "0.8"
 valuable = { version = "0.1", features = ["derive"] }
 regex = "1.11"
+
+tracing = { version = "0.1", features = ["valuable"] }
+tracing-subscriber = { version = "0.3", default-features = false, features = [
+    "env-filter",
+    "json",
+    "fmt",
+    "valuable",
+    "registry",
+] }
